compiler/tools/fpp-to-dict/test/top/missingFwOpcodeType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingFwOpcodeType.fpp:26.1
topology T {
^
error: symbol FwOpcodeType is not defined
note: looking for a type here
note: when constructing a dictionary, the type FwOpcodeType must be defined
